[BE] refactor: drain executor를 ThreadPoolExecutor 직접 생성으로 교체
newFixedThreadPool의 무제한 LinkedBlockingQueue 대신 bounded 큐와
명시적 rejection handler를 사용해 포화 시 동작을 코드에 드러낸다.